--- a/src/TemperatureConversion.css
+++ b/src/TemperatureConversion.css
@@ -22,6 +22,10 @@ a:hover {
 }
 
 .tempRange {
-  font-size: 16px;
+  font-size: 18px;
   color: rgb(70, 69, 69);
+  display: block;
+  position: relative;
+  margin-top: -25px;
+  text-align: left;
 }
