--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -6,7 +6,7 @@
 }
 
 .timeList {
-  text-decoration: none;
+  list-style: none;
   font-size: 20px;
   font-weight: bold;
   text-align: center;
@@ -14,6 +14,11 @@
   padding: 0;
   position: relative;
   margin-top: -50px;
+}
+
+.imageDescription {
+  padding-top: 45px;
+  padding-bottom: 75px;
 }
 
 .weatherDescription {
