--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -1,3 +1,18 @@
+.navigationLinks {
+  font-size: 46px;
+  color: #5cc1b3;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  justify-content: center;
+  margin-bottom: auto;
+}
+
+.searchedCityHead {
+  align-content: center;
+  justify-content: center;
+}
+
 .searchedCity {
   color: #ff6473;
   font-size: 60px;
