--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 .App {
-  background-color: #737475;
+  background: linear-gradient(
+    to top,
+    rgb(32, 38, 57) 21.4%,
+    rgb(63, 76, 119) 60.2%
+  );
+  color: whitesmoke;
   border-radius: 10px;
-  margin-top: 10px;
+  margin: 15px;
+  padding: 20px;
 }
 
 .App-header {
