--- a/src/components/SearchWeather.css
+++ b/src/components/SearchWeather.css
@@ -1,14 +1,32 @@
 .searchArea {
-  justify-content: center;
+  margin-bottom: 20px;
+
+  display: grid;
+  grid-template-columns: auto;
+  gap: 10px;
 }
 
-.search {
-  padding: 10px;
-  margin: 10px;
+form {
+  grid-row: 1;
+  grid-column: 1 /3;
 }
 
 .searchBar {
-  width: 40%;
   padding: 5px;
+  margin-right: 10px;
   border-radius: 10px;
+  width: 60%;
+}
+
+.searchButton,
+.locationButton {
+  border-radius: 10px;
+  background-color: white;
+  border: none;
+
+  grid-row: 1;
+}
+
+.locationButton {
+  width: 50%;
 }
