--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,5 @@
   border-radius: 10px;
   margin: 15px;
   padding: 20px;
-}
-
-.App-header {
-  color: white;
-  text-align: center;
+  width: 75%;
 }
